--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -6,9 +6,11 @@
     tools:context=".AppActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/fragment_container"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:navGraph="@layout/nav_graph" />
+        app:defaultNavHost="true"
+        app:navGraph="@layout/nav_graph"
+        android:layout_marginBottom="56dp"/>
 </androidx.drawerlayout.widget.DrawerLayout>
