--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_location"
-        android:title="Locations"
-        android:icon="@android:drawable/ic_menu_mylocation" />
+        android:icon="@android:drawable/ic_menu_mylocation"
+        android:title="Location" />
+    <item
+        android:id="@+id/nav_weather"
+        android:icon="@android:drawable/ic_menu_compass"
+        android:title="Clima" />
     <item
         android:id="@+id/nav_forecast"
-        android:title="Pronóstico"
-        android:icon="@android:drawable/ic_menu_day" />
-    <item
-        android:id="@+id/nav_future"
-        android:title="Futuro"
-        android:icon="@android:drawable/ic_menu_recent_history" />
+        android:icon="@android:drawable/ic_menu_today"
+        android:title="Futuro" />
 </menu>
