--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/ivIcono"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/icantena"
+        android:src="@drawable/iclogo"
         android:layout_marginBottom="16dp" />
 
     <TextView
